# kime

./: .coverage  .gitattributes  .gitignore  README.md  SPEC.md  alembic.ini  conftest.py  kime.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.conductor/: audit-report.md
backend/: __init__.py  coaching.py  config.py  database.py  main.py  models.py  schemas.py  worker.py
backend/alembic/: env.py  script.py.mako
backend/extractors/: landmarks.py
backend/routers/: analyze.py  jobs.py  results.py  upload.py
backend/scoring/: criteria.py  dtw_aligner.py  engine.py  weights.py
backend/tests/: test_analyze_endpoint.py  test_extract_landmarks.py  test_results.py
backend/vision/: normalize.py  pipeline.py  segment.py  smooth.py
data/: candidates.json  sources.yaml  test_sample_landmarks.json
data/staged/: manifest.json
data_pipeline/: __init__.py  __main__.py  cli.py  extractor.py  fetcher.py  filter.py  review.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
scripts/: build_reference_templates.py  build_sources.py  build_staged_manifest.py  extract_landmarks.py  generate_reference_templates.py  sanity_eval.py
tests/: test_api.py  test_cli.py  test_coaching.py  test_extractor.py  test_fetcher.py  test_filter.py  test_review.py  test_smoke.py  test_upload.py  test_worker.py
tests/scoring/: test_criteria.py  test_dtw_aligner.py  test_engine.py
tests/vision/: test_normalize.py  (+3 more)
(+23 files in other folders)
